[gd_scene load_steps=11 format=3 uid="uid://dxp81qhq5vuq"]

[ext_resource type="Script" path="res://enemies/plant_enemy.gd" id="1_5jrp8"]
[ext_resource type="Texture2D" uid="uid://cg52wp0yoso0s" path="res://enemies/plant_enemy.png" id="1_vojyp"]
[ext_resource type="PackedScene" uid="uid://didjova8ah46y" path="res://collisions/hurtbox.tscn" id="2_eq3o5"]
[ext_resource type="PackedScene" uid="uid://tkxrr6fs055k" path="res://collisions/hitbox.tscn" id="3_2j8y4"]
[ext_resource type="PackedScene" uid="uid://d0h0ldh0uyvxi" path="res://base_stats.tscn" id="5_wkjou"]

[sub_resource type="Animation" id="Animation_sxvcn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_if2nj"]
resource_name = "attack"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f1g6o"]
_data = {
"RESET": SubResource("Animation_sxvcn"),
"attack": SubResource("Animation_if2nj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrkhc"]
size = Vector2(14, 11.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_hjkwr"]
radius = 5.05594

[node name="PlantEnemy" type="Node2D"]
script = ExtResource("1_5jrp8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_vojyp")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f1g6o")
}
autoplay = "attack"

[node name="BulletSpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, -9)

[node name="FireDirection" type="Marker2D" parent="."]
position = Vector2(0, -13)

[node name="Hurtbox" parent="." instance=ExtResource("2_eq3o5")]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -6.25)
shape = SubResource("RectangleShape2D_mrkhc")

[node name="Hitbox" parent="." instance=ExtResource("3_2j8y4")]
position = Vector2(0, -6.25)
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1.25)
shape = SubResource("CircleShape2D_hjkwr")

[node name="BaseStats" parent="." instance=ExtResource("5_wkjou")]

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="no_health" from="BaseStats" to="." method="_on_base_stats_no_health"]
